GNOME Bugzilla – Bug 791022
backends: Fix ClutterRect initialisations
Last modified: 2017-11-30 14:27:57 UTC
Trivial patch attached.
Created attachment 364667 [details] [review] backends: Fix ClutterRect initialisations With Clang, these initialisations were warning about missing brackets. Signed-off-by: Philip Withnall <withnall@endlessm.com>
Review of attachment 364667 [details] [review]: LGTM
Attachment 364667 [details] pushed as 93e450f - backends: Fix ClutterRect initialisations